# ewcl-models.v1

./: .gitattributes  CHANGELOG.md  CITATION.cff  COMMERCIAL.md  LICENSE  README.md  WEIGHTS_LICENSE.md  pyproject.toml
contracts/: README.md  contracts.manifest.json
contracts/features/: EWCL-Disorder.feature_list.csv  EWCL-Sequence.feature_list.csv  EWCL-Structure.feature_list.csv
docs/: REPRODUCIBILITY_BACKEND_ALIGNMENT.md
ewcl_models/: __init__.py  cli.py  diagnostics.py  io.py  loaders.py  predictors.py  schema.py
ewcl_models/feature_extractors/: __init__.py  sequence_features.py  structure_features.py
examples/: example.fasta  run_example.py  run_example.sh
models/: EWCL-Disorder_feature_list.json  EWCL-Sequence_feature_list.json  EWCL-Structure_feature_list.json
models/ewcl-disorder/contract/: inference_contract.json
models/ewcl-disorder/docs/: README_MODEL.md
models/ewcl-disorder/provenance/: data_manifest.json  training_meta.json  versions.json
models/ewcl-sequence/contract/: inference_contract.json  schema_rules.json
models/ewcl-sequence/docs/: README_MODEL.md
models/ewcl-sequence/model/: model.pkl
models/ewcl-sequence/provenance/: data_manifest.json  training_meta.json  versions.json
models/ewcl-structure/calibration/: calibration.json
models/ewcl-structure/contract/: inference_contract.json  schema_rules.json
models/ewcl-structure/docs/: README_MODEL.md
models/ewcl-structure/provenance/: data_manifest.json  training_meta.json  versions.json
requirements/: base.txt  dev.txt  environment.yml  requirements-lock.txt  structure.txt
tools/: build_model_zip.py  compare_local_zip_backend.py  export_feature_contracts.py  validate_feature_contracts.py
